# pdf_bot

./: .cursorrules  .env.example  .gitignore  README.md  pyproject.toml  run.py
app/: __init__.py  config.py  main.py
app/agent/: __init__.py  agent.py  knowledge.py
app/api/: __init__.py  chat.py  models.py  upload.py
app/parsing/: __init__.py
app/ui/: __init__.py  chat_ui.py
tests/integration/: test_streaming.py  test_ui_streaming.py  test_upload.py
tests/unit/: test_agent.py  test_chat_endpoint.py  test_config.py  test_main.py  test_upload.py
